// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders a warning if isReusable 1`] = `
<div
  className="card"
>
  <strong>
    this is a title
  </strong>
  <div
    className="text"
  >
    Post Type: 
    features
  </div>
  <a
    className="link"
    rel="noopener noreferrer"
    tabIndex={0}
    target="_blank"
  >
    Edit Post
  </a>
  <a
    className="link"
    rel="noopener noreferrer"
    tabIndex={0}
    target="_blank"
  >
    View Post
  </a>
  <div
    className="alert"
  >
    3
     usages in post
  </div>
  <div
    className="alert warning"
  >
    This is a Reusable Block
  </div>
</div>
`;

exports[`renders the CardList and Card 1`] = `
<div
  className="cardList"
>
  <div
    className="cardListTitle"
  >
    <svg
      viewBox="0 0 64 64"
    >
      <svg
        data-bbox="18 18 64 64"
        data-color="1"
        data-type="shape"
        fill="#FDFDFD"
        viewBox="18 18 64 64"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M50.03 18v31.97H82V18H50.03zM66 24.98a9 9 0 019 9 9 9 0 01-9 9 9 9 0 01-9-9 9 9 0 019-9zM18 50.03V82h31.97V50.03H18zm15.99 7a9 9 0 019 9 9 9 0 01-9 9 9 9 0 01-9-9 9 9 0 019-9zM42.99 33.99a9 9 0 11-18 0 9 9 0 0118 0zM75.02 66.03a9 9 0 11-18 0 9 9 0 0118 0z"
        />
        <path
          d="M50.03 18v31.97H82V18H50.03zM66 24.98a9 9 0 019 9 9 9 0 01-9 9 9 9 0 01-9-9 9 9 0 019-9zM18 50.03V82h31.97V50.03H18zm15.99 7a9 9 0 019 9 9 9 0 01-9 9 9 9 0 01-9-9 9 9 0 019-9zM42.99 33.99a9 9 0 11-18 0 9 9 0 0118 0zM75.02 66.03a9 9 0 11-18 0 9 9 0 0118 0z"
        />
      </svg>
    </svg>
    Card List
  </div>
  <div
    className="card"
  >
    <strong>
      this is a title
    </strong>
    <div
      className="text"
    >
      Post Type: 
      features
    </div>
    <a
      className="link"
      rel="noopener noreferrer"
      tabIndex={0}
      target="_blank"
    >
      Edit Post
    </a>
    <a
      className="link"
      rel="noopener noreferrer"
      tabIndex={0}
      target="_blank"
    >
      View Post
    </a>
  </div>
</div>
`;

exports[`tells that there is multiple usages in post 1`] = `
<div
  className="card"
>
  <strong>
    this is a title
  </strong>
  <div
    className="text"
  >
    Post Type: 
    features
  </div>
  <a
    className="link"
    rel="noopener noreferrer"
    tabIndex={0}
    target="_blank"
  >
    Edit Post
  </a>
  <a
    className="link"
    rel="noopener noreferrer"
    tabIndex={0}
    target="_blank"
  >
    View Post
  </a>
  <div
    className="alert"
  >
    3
     usages in post
  </div>
</div>
`;
